kubernetes/networking/api-gateway-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-gateway-vs
  namespace: prima-api
spec:
  hosts:
  - "*"
  gateways:
  - prima-api-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: api-gateway
        port:
          number: 8000
