kubernetes/networking/user-service-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-service-vs
  namespace: prima-api
spec:
  hosts:
  - "*"
  gateways:
  - prima-api-gateway
  http:
  - match:
    - uri:
        prefix: /users
    - uri:
        prefix: /user
    route:
    - destination:
        host: user-service
        port:
          number: 8000
